[package]
authors = ["PureStake"]
edition = "2018"
name = "pallet-author-slot-filter"
version = "0.1.0"

[dependencies]
log = { version = "0.4", default-features = false }
parity-scale-codec = { version = "2.0.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.101", optional = true, features = ["derive"] }
frame-support = { git = "https://github.com/paritytech/substrate", default-features = false, rev = "e98aca335f066d84d7a5cbabf280392f39e1cc99" }
frame-system = { git = "https://github.com/paritytech/substrate", default-features = false, rev = "e98aca335f066d84d7a5cbabf280392f39e1cc99" }
sp-core = { git = "https://github.com/paritytech/substrate", default-features = false, rev = "e98aca335f066d84d7a5cbabf280392f39e1cc99" }
sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false, rev = "e98aca335f066d84d7a5cbabf280392f39e1cc99" }
sp-std = { git = "https://github.com/paritytech/substrate", rev = "e98aca335f066d84d7a5cbabf280392f39e1cc99", default-features = false }
pallet-author-inherent = { path = "../author-inherent", default-features = false }
cumulus-pallet-parachain-system = { path = "../parachain-system",  default-features = false}
nimbus-primitives = { path = "../../primitives/nimbus", default-features = false }

[features]
default = ["std"]
std = [
	"log/std",
  "serde",
  "parity-scale-codec/std",
  "frame-support/std",
  "frame-system/std",
  "pallet-author-inherent/std",
  "sp-core/std",
  "sp-runtime/std",
  "cumulus-pallet-parachain-system/std",
  "sp-std/std",
  "nimbus-primitives/std",
]
