[package]
name = "cumulus-primitives-parachain-inherent"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
# Substrate dependencies
sp-inherents = { git = "https://github.com/paritytech/substrate", default-features = false, rev = "e98aca335f066d84d7a5cbabf280392f39e1cc99" }
sp-core = { git = "https://github.com/paritytech/substrate", default-features = false, rev = "e98aca335f066d84d7a5cbabf280392f39e1cc99" }
sc-client-api = { git = "https://github.com/paritytech/substrate", optional = true , rev = "e98aca335f066d84d7a5cbabf280392f39e1cc99" }
sp-runtime = { git = "https://github.com/paritytech/substrate", optional = true , rev = "e98aca335f066d84d7a5cbabf280392f39e1cc99" }
sp-std = { git = "https://github.com/paritytech/substrate", default-features = false, rev = "e98aca335f066d84d7a5cbabf280392f39e1cc99" }
sp-state-machine = { git = "https://github.com/paritytech/substrate", optional = true , rev = "e98aca335f066d84d7a5cbabf280392f39e1cc99" }
sp-trie = { git = "https://github.com/paritytech/substrate", default-features = false, rev = "e98aca335f066d84d7a5cbabf280392f39e1cc99" }
sp-api = { git = "https://github.com/paritytech/substrate", optional = true , rev = "e98aca335f066d84d7a5cbabf280392f39e1cc99" }

# Polkadot dependencies
polkadot-service = { git = "https://github.com/paritytech/polkadot", optional = true, rev = "82aa404ca3a53814a278c032967d17e44b765b46" }

# Cumulus dependencies
cumulus-primitives-core = { path = "../core", default-features = false }

# Other dependencies
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = [ "derive" ] }
tracing = { version = "0.1.22", optional = true }
async-trait = { version = "0.1.42", optional = true }

[features]
default = [ "std" ]
std = [
	"async-trait",
	"codec/std",
	"cumulus-primitives-core/std",
	"sp-inherents/std",
	"sp-core/std",
	"sp-trie/std",
	"sp-std/std",
	"sp-state-machine",
	"tracing",
	"sp-runtime",
	"sc-client-api",
	"sp-api",
	"polkadot-service",
]
