[package]
name = "cumulus-test-relay-sproof-builder"
version = '0.1.0'
authors = ["Parity Technologies <admin@parity.io>"]
edition = '2018'

[dependencies]
# Other dependencies
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = [ "derive" ] }

# Substrate dependencies
sp-state-machine = { git = "https://github.com/paritytech/substrate", default-features = false, rev = "e98aca335f066d84d7a5cbabf280392f39e1cc99" }
sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false, rev = "e98aca335f066d84d7a5cbabf280392f39e1cc99" }
sp-std = { git = "https://github.com/paritytech/substrate", default-features = false, rev = "e98aca335f066d84d7a5cbabf280392f39e1cc99" }

# Polkadot dependencies
polkadot-primitives = { git = "https://github.com/paritytech/polkadot", default-features = false, rev = "82aa404ca3a53814a278c032967d17e44b765b46" }

# Cumulus dependencies
cumulus-primitives-core = { path = "../../primitives/core", default-features = false }

[features]
default = [ "std" ]
std = [
	"codec/std",
	"sp-state-machine/std",
	"sp-runtime/std",
	"sp-std/std",
	"cumulus-primitives-core/std",
]
